<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_in_marks"
        android:orderInCategory="100"
        android:title="@string/input_marks"
        android:icon="@drawable/plus_w"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_in_marks_t"
        android:orderInCategory="100"
        android:title="@string/input_marks_t"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/action_delete_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_all_t"
        android:orderInCategory="100"
        android:title="@string/action_delete_all_t"
        app:showAsAction="never"/>

</menu>